--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                     <div class="video-info">
                         <h3>Your Pizza Questions, My Honest Answers</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>The Kashi You Visit Is Not The Real Kashi! | 4K UHD | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -189,7 +189,7 @@
                     <div class="video-info">
                         <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">10 hours ago</div>
+                        <div class="date">11 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -200,7 +200,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - In the Image of God</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">12 hours ago</div>
+                        <div class="date">13 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                         <div class="channel">Paolo fromTOKYO</div>
-                        <div class="date">18 hours ago</div>
+                        <div class="date">19 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -662,7 +662,7 @@
                     <div class="video-info">
                         <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -838,7 +838,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN LEAK THEIR CAMERA ROLLS: IMPOSTOR EDITION</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">6 days ago</div>
+                        <div class="date">1 week ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">10 hours ago</div>
+                            <div class="date">11 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>The Kashi You Visit Is Not The Real Kashi! | 4K UHD | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - In the Image of God</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8234,7 +8234,7 @@
                         <div class="video-info">
                             <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">12 hours ago</div>
+                            <div class="date">13 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Your Pizza Questions, My Honest Answers</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9401,7 +9401,7 @@
                         <div class="video-info">
                             <h3>Don't Keep Your Spine Angle in the Golf Swing - It's Killing Your Ball Striking!</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Behind the Counter at a Local Japanese Oden Restaurant</h3>
                             <div class="channel">Paolo fromTOKYO</div>
-                            <div class="date">18 hours ago</div>
+                            <div class="date">19 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9627,7 +9627,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN LEAK THEIR CAMERA ROLLS: IMPOSTOR EDITION</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">6 days ago</div>
+                            <div class="date">1 week ago</div>
                         </div>
                     </a>
                 </div>
