--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
     
             <div class="video">
                 <a href="https://www.youtube.com/watch?v=tUX_CqmFoa8" target="_blank">
-                    <img src="https://i.ytimg.com/vi/tUX_CqmFoa8/mqdefault.jpg" alt="The Day I Ate the Most Delicious Onigiri 🍙">
+                    <img src="https://i.ytimg.com/vi/tUX_CqmFoa8/mqdefault.jpg" alt="Japan’s Hidden Experience You Can’t Miss">
                     <div class="video-info">
-                        <h3>The Day I Ate the Most Delicious Onigiri 🍙</h3>
+                        <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">4 hours ago</div>
+                        <div class="date">5 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>SIDEMEN PLAY FORTNITE UNTIL WE WIN</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">9 hours ago</div>
+                        <div class="date">10 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>Your Pizza Questions, My Honest Answers</h3>
                         <div class="channel">Julian Sisofo</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -178,7 +178,7 @@
                     <div class="video-info">
                         <h3>The Kashi You Visit Is Not The Real Kashi! | 4K UHD | Sadhguru</h3>
                         <div class="channel">Sadhguru</div>
-                        <div class="date">15 hours ago</div>
+                        <div class="date">16 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -211,7 +211,7 @@
                     <div class="video-info">
                         <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">21 hours ago</div>
+                        <div class="date">22 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>Michael Singer - In the Image of God</h3>
                         <div class="channel">Seats of Contemplation</div>
-                        <div class="date">22 hours ago</div>
+                        <div class="date">23 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -244,7 +244,7 @@
                     <div class="video-info">
                         <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                         <div class="channel">Samurai Matcha</div>
-                        <div class="date">23 hours ago</div>
+                        <div class="date">Yesterday</div>
                     </div>
                 </a>
             </div>
@@ -673,7 +673,7 @@
                     <div class="video-info">
                         <h3>The problem with monetary targets in trading 💰</h3>
                         <div class="channel">Charlie Burton Trading</div>
-                        <div class="date">4 days ago</div>
+                        <div class="date">5 days ago</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>The Fear of Letting Go — Why Traders Bank Too Soon</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">21 hours ago</div>
+                            <div class="date">22 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -5248,7 +5248,7 @@
                         <div class="video-info">
                             <h3>The problem with monetary targets in trading 💰</h3>
                             <div class="channel">Charlie Burton Trading</div>
-                            <div class="date">4 days ago</div>
+                            <div class="date">5 days ago</div>
                         </div>
                     </a>
                 </div>
@@ -7249,7 +7249,7 @@
                         <div class="video-info">
                             <h3>The Kashi You Visit Is Not The Real Kashi! | 4K UHD | Sadhguru</h3>
                             <div class="channel">Sadhguru</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7271,7 +7271,7 @@
                         <div class="video-info">
                             <h3>Michael Singer - In the Image of God</h3>
                             <div class="channel">Seats of Contemplation</div>
-                            <div class="date">22 hours ago</div>
+                            <div class="date">23 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8230,11 +8230,11 @@
         
                 <div class="video">
                     <a href="https://www.youtube.com/watch?v=tUX_CqmFoa8" target="_blank">
-                        <img src="https://i.ytimg.com/vi/tUX_CqmFoa8/mqdefault.jpg" alt="The Day I Ate the Most Delicious Onigiri 🍙">
+                        <img src="https://i.ytimg.com/vi/tUX_CqmFoa8/mqdefault.jpg" alt="Japan’s Hidden Experience You Can’t Miss">
                         <div class="video-info">
-                            <h3>The Day I Ate the Most Delicious Onigiri 🍙</h3>
+                            <h3>Japan’s Hidden Experience You Can’t Miss</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">4 hours ago</div>
+                            <div class="date">5 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8245,7 +8245,7 @@
                         <div class="video-info">
                             <h3>6 Tiny Habits from Japanese Culture to Become More Disciplined</h3>
                             <div class="channel">Samurai Matcha</div>
-                            <div class="date">23 hours ago</div>
+                            <div class="date">Yesterday</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Your Pizza Questions, My Honest Answers</h3>
                             <div class="channel">Julian Sisofo</div>
-                            <div class="date">15 hours ago</div>
+                            <div class="date">16 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>SIDEMEN PLAY FORTNITE UNTIL WE WIN</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">9 hours ago</div>
+                            <div class="date">10 hours ago</div>
                         </div>
                     </a>
                 </div>
